2010-06-22  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issues #8162 and #8316, usage of deprecated APIs, credits Marc Bastian Heinrichs

2010-06-18  Ingo Renner  <ingo.renner@dkd.de>

	* Added manual.sxw, providing a general overview of the extension and pointing to the actual documentation in the wiki

2010-06-18 Timo Schmidt <timo.schmidt@aoemedia.de>

	* Applied patch to be able to use noConflict mode, credits Mario Rimann

2010-06-15  Ingo Renner  <ingo.renner@dkd.de>

	* Updated Tomcat / Solr install script

2010-06-02  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #8029: PHP fatal errors in reports module, credits Marc Bastian Heinrichs
	* Fixed issue #8036: UTF8 chars in search string are not displayed correct in result, credits Marc Bastian Heinrichs

2010-06-01  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #7786: searchForm = advanced fails
	* Fixed issue #7787: Markup of search results can be semantically optimized
	* Added a marker ###RESULTS.queryTime#### in the results command to show the query time
	* Fixed issue #7805: Add French and Italian translation, credits Mario Rimann
	* Added dutch translation
	* Fixed issues #5767, #6360, and #7834: Wrong date handling in search result, credits "Thomas" and Michael Knabe

2010-05-31  Ingo Renner  <ingo.renner@dkd.de>

	* Changed the default schema.xml, adding the preserveOriginal="1" option to all solr.WordDelimiterFilterFactory filters
	* Fixed issue #7363: Auto Suggest on results page does not work
	* Fixed an issue where auto suggest would automatically select the first suggestion

2010-05-27  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #7763: Suggest functionality does not take language into account, credits Mario Rimann

2010-05-26  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed issue #7815: Code injection possible in Search field
	* Improved security by consistently using htmlentities() with ENT_QUOTES option

2010-05-07  Ingo Renner  <ingo.renner@dkd.de>
